--- a/dom/style2.css
+++ b/dom/style2.css
@@ -10,6 +10,12 @@ body {
     height: 100%;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 20px;
+}
+
 #carre {
     background-color: red;
     display: flex;
@@ -17,12 +23,13 @@ body {
     align-items: center;
     width: 100px;
     height: 100px;
+    transition-duration: 2s;
 }
 
 .button {
     display: flex;
     justify-content: space-around;
-    height: 30px;
+    height: 40px;
     padding-top: 50px;
     width: 300px;
 }
